<Fixed spacing with buttons>

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,10 @@ div {
     color: black;
     text-align: center;
     height: auto;
-    text-shadow: 4px 4px 8px #000;
+    /* text-shadow: 4px 4px 8px #000; */
 }
 
 .form-row {
-   /* background-color: lightblue;  */
    background: url("../../images/palm-tree-inv.jpg");
    text-align: center;
    font-size: 16px;
@@ -137,10 +136,11 @@ html, body {
     font-size: 18 px;
     color: red;
     padding: 2px;
-    background-image: url("../../images/hammock.jpg");
-    background-size: 100%;
-    min-width: 100%;
-    min-height: 100%;
+    background: url("../../images/hammock.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 
@@ -155,6 +155,10 @@ footer {
 .wrapper {
     width: 1024px;
     margin: 40px auto;
+}
+
+.jumbotron {
+  background-color: rgba(255, 255, 255, .7)
 }
   
 @media only screen and (max-width: 980px) {
